--- a/application/system/view/franchisee/index.html
+++ b/application/system/view/franchisee/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>提现|后台管理系统</title>
+    <title>加盟商|后台管理系统</title>
     {include file="public/head" /}
 
 </head>
 <body>
-<h4>用户管理</h4>
+<h4>加盟商管理</h4>
 <div class="toolsBar">
     <!--fgf为工具栏分隔符，刷新没有，离开都有。中间工具每一类第一个添加fgf-->
     <ul>
@@ -16,17 +16,25 @@
                 <img src="__STATIC__/system/img/arrow_refresh.png"/>
                 重置</a>
         </li>
+        <li class="fgf" onclick="layerIfWindow('添加加盟商','{:url('add')}','','300')">
+            <img src="__STATIC__/system/img/add.png"/>
+            添加
+        </li>
         <li class="fgf" onclick="layerPage('查询',$('#search'),'700','300')" >
             <img src="__STATIC__/system/img/page_white_magnify.png"/>
             查询
         </li>
-        <li class="fgf js-ajax-form-btn" data-form="js-ajax-form" data-action="{:url('review')}">
+        <li class="fgf js-ajax-form-btn" data-form="js-ajax-form" data-action="{:url('authorize',array('is_authorized'=>1))}">
             <img src="__STATIC__/system/img/checked.png"/>
-            审核
+            授权
         </li>
-        <li class="fgf js-ajax-form-btn" data-form="js-ajax-form" data-action="{:url('handle')}">
+        <li class="fgf js-ajax-form-btn" data-form="js-ajax-form" data-action="{:url('authorize',array('is_authorized'=>0))}">
             <img src="__STATIC__/system/img/recycle.png"/>
-            提现
+            撤销授权
+        </li>
+        <li class="fgf js-ajax-form-btn" data-form="js-ajax-form" data-action="{:url('delete')}">
+            <img src="__STATIC__/system/img/broom.png"/>
+            删除
         </li>
     </ul>
 </div>
@@ -40,12 +48,12 @@
                     <input class="va_m" type="checkbox" name="" id="allCheck" value="" data-falg="allCheck" onclick="checkBoxOp(this)"/>
                 </th>
                 <th>ID</th>
-                <th>用户</th>
-                <th>金额</th>
-                <th>申请时间</th>
-                <th>提现说明</th>
-                <th>银行卡号</th>
-                <th>提现进度</th>
+                <th>加盟商名称</th>
+                <th>地址</th>
+                <th>联系方式</th>
+                <th>授权状态</th>
+                <th>创建时间</th>
+                <th>更新时间</th>
                 <th>操作</th>
             </tr>
             {notempty name='list'}
@@ -54,21 +62,16 @@
                 <td>
                     <input class="va_m" type="checkbox" name="ids[]" value="{$v['id']}" onclick="checkBoxOp(this)" id="check-{$v['id']}"/>
                 </td>
-                <td>{$v['id']}</td>
-                <td>{$v.user_name}</td>
-                <td>{$v.amount|number_format=2}</td>
-                <td>{$v.apply_time}</td>
-                <td>{$v.info}</td>
-                <td>{$v.card_number}</td>
+                <td>{$v->id}</td>
+                <td>{$v->name}</td>
+                <td>{$v->address}</td>
+                <td>{$v->tel}</td>
+                <td>{$v->is_authorized}</td>
+                <td>{$v->created_at}</td>
+                <td>{$v->updated_at}</td>
                 <td>
-                    {switch name='v.status'}
-                        {case value='0'}待审核{/case}
-                        {case value='1'}待提现{/case}
-                        {case value='2'}已提现{/case}
-                    {/switch}
-                </td>
-                <td>
-                    <button type="button" data-action="{:url('delete',['ids'=>$v.id])}" class="btn js-ajax-form-btn">删除</button>
+                    <button type="button" class="btn" onclick="layerIfWindow('详细信息',	'{:url('detail',['id'=>$v->id])}','','300')" >详细信息</button>
+                    <button type="button" data-action="{:url('delete',['ids'=>$v->id])}" class="btn js-ajax-form-btn">删除</button>
                 </td>
             </tr>
             {/volist}
@@ -95,11 +98,10 @@
             <tr class="h50">
                 <td>状态：</td>
                 <td>
-                    <select name="status" id="status">
+                    <select name="is_authorized" id="is_authorized">
                         <option value="">--全部--</option>
-                        <option value="0" {if condition="isset($status) and $status==0"}selected{/if}>--待审核--</option>
-                        <option value="1" {if condition="isset($status) and $status==1"}selected{/if}>--待提现--</option>
-                        <option value="2" {if condition="isset($status) and $status==2"}selected{/if}>--已提现--</option>
+                        <option value="0" {if condition="isset($is_authorized) and $is_authorized==0"}selected{/if}>--暂未授权--</option>
+                        <option value="1" {if condition="isset($is_authorized) and $is_authorized==1"}selected{/if}>--已授权--</option>
                     </select>
                 </td>
             </tr>
