--- a/application/system/view/public/head.html
+++ b/application/system/view/public/head.html
@@ -23,3 +23,7 @@
 <script src="__STATIC__/system/layer/layer.js" type="text/javascript" charset="utf-8"></script>
 <script src="__STATIC__/system/js/iframe.js" type="text/javascript" charset="utf-8"></script>
 <script src="__STATIC__/system/js/htglxt.js" type="text/javascript" charset="utf-8"></script>
+<script>
+    var upload_url="{:url('Tools/uploads')}";
+    var filemanager_url="{:url('Tools/filelist')}";
+</script>
