--- a/application/system/view/config/index.html
+++ b/application/system/view/config/index.html
@@ -25,30 +25,30 @@
                 <td>网站标题：</td>
                 <td colspan="3"><input type="text" name="title" id="title" value="{:isset($infos)?$infos->title:''}" placeholder="请输入网站标题" /></td>
             </tr>
-            <tr class="h50">
-                <td>产品描述：</td>
-                <td colspan="3"><textarea name="product" id="product" placeholder="请输入产品描述" >{:isset($infos)?$infos->product:''}</textarea></td>
-            </tr>
+            <!--<tr class="h50">-->
+                <!--<td>产品描述：</td>-->
+                <!--<td colspan="3"><textarea name="product" id="product" placeholder="请输入产品描述" >{:isset($infos)?$infos->product:''}</textarea></td>-->
+            <!--</tr>-->
             <tr class="h50">
                 <td>公司简介：</td>
                 <td colspan="3"><textarea name="company" id="company" placeholder="请输入公司简介" >{:isset($infos)?$infos->company:''}</textarea></td>
             </tr>
-            <tr class="h50">
-                <td>LOGO：</td>
-                <td class="imgCon" colspan="3">
-                    {if condition="isset($infos) and $infos->logo"}
-                    <div class="img">
-                        <img src="{$infos->logo}" class="w_100 h_100" onclick="bigimg(this)">
-                        <p><span onclick="picremove(this);">删除</span></p>
-                        <input type="hidden" name="logo" value="{$infos->logo}">
-                    </div>
-                    {/if}
-                    <div class="img upload-btn">
-                        <input type="file" name="upload_files" style="display: none" class="upload_files" data-hiddenname="logo" data-url="{:url('Tools/upload_img')}">
-                        <a>+</a>
-                    </div>
-                </td>
-            </tr>
+            <!--<tr class="h50">-->
+                <!--<td>LOGO：</td>-->
+                <!--<td class="imgCon" colspan="3">-->
+                    <!--{if condition="isset($infos) and $infos->logo"}-->
+                    <!--<div class="img">-->
+                        <!--<img src="{$infos->logo}" class="w_100 h_100" onclick="bigimg(this)">-->
+                        <!--<p><span onclick="picremove(this);">删除</span></p>-->
+                        <!--<input type="hidden" name="logo" value="{$infos->logo}">-->
+                    <!--</div>-->
+                    <!--{/if}-->
+                    <!--<div class="img upload-btn">-->
+                        <!--<input type="file" name="upload_files" style="display: none" class="upload_files" data-hiddenname="logo" data-url="{:url('Tools/upload_img')}">-->
+                        <!--<a>+</a>-->
+                    <!--</div>-->
+                <!--</td>-->
+            <!--</tr>-->
 
             {if condition="isset($infos)"}
             <tr class="h50">
