--- a/application/system/view/consumer/modify.html
+++ b/application/system/view/consumer/modify.html
@@ -16,7 +16,7 @@
             <tr class="h50">
                 <td><label for="user_name">用户昵称：</label></td>
                 <td colspan="3">
-                    <input id="user_name" class="must" type="text" name="user_name" value="{$infos->user_name|default=''}" required placeholder="输入加盟商公司名"/>
+                    <input id="user_name" class="must" type="text" name="user_name" value="{$infos->user_name|default=''}" required placeholder="输入用户名"/>
                 </td>
             </tr>
             <tr class="h50">
