张_产品添加图片上传

--- a/application/system/view/product/modify.html
+++ b/application/system/view/product/modify.html
@@ -81,6 +81,7 @@
 <script type="text/javascript" src="__STATIC__/system/kindeditor/kindeditor-all-min.js" charset="utf-8"></script>
 <script type="text/javascript" src="__STATIC__/system/kindeditor/lang/zh-CN.js" charset="utf-8"></script>
 <script type="text/javascript" src="__STATIC__/system/kindeditor/plugins/code/prettify.js" charset="utf-8"></script>
+<script type="text/javascript" src="__STATIC__/system/js/KindEditor_imgupload.js" charset="utf-8"></script>
 <script>
     /*=======富文本======*/
     KindEditor.ready(function(K) {
